--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,14 +10,21 @@ services:
       - db
     environment:
       - DATABASE_URL=${DATABASE_URL}
+    restart: unless-stopped
+    env_file:
+      - .env
+
   db:
     image: postgres:16
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
     volumes:
       - pgdata:/var/lib/postgresql/data
-
+    ports:
+      - "5432:5432"
+    restart: unless-stopped
+    env_file:
+      - .env
 volumes:
   pgdata:
