--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ DATABASE_URL=postgres://postgres:password@localhost:5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
 POSTGRES_DB=postgres
+USERNAME=admin
+PASSWORD=password
