--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "clsx": "^2.1.0",
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
+    "framer-motion": "^11.0.24",
     "intl-parse-accept-language": "^1.0.0",
     "is-ip": "^5.0.1",
     "isbot": "^4.1.0",
