--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,14 +3,13 @@ services:
   app:
     build:
       context: .
-      target: runner
     ports:
       - '3000:3000'
     depends_on:
       - db
     environment:
       - DATABASE_URL=${DATABASE_URL}
-    restart: unless-stopped
+      - TZ=Europe/Tallinn
     env_file:
       - .env
 
@@ -19,6 +18,7 @@ services:
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - TZ=Europe/Tallinn
     volumes:
       - pgdata:/var/lib/postgresql/data
     ports:
